--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=GTEXTESTATEPORTAL
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:yYrj/nMGrtJKkZmp/ZjbWCxQetUqiNzHhtK6PW88QTg=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=sytemap
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -63,3 +63,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+CLOUDINARY_URL=cloudinary://695891911823662:DJ6s51AialXhGtOy2kq0waOnScM@dhfmwhhbc
+CLOUDINARY_CLOUD_NAME=dhfmwhhbc
+CLOUDINARY_API_KEY=695891911823662
+CLOUDINARY_API_SECRET=DJ6s51AialXhGtOy2kq0waOnScM
+
+PAYSTACK_SECRET_KEY=sk_test_fe323befd19e83aa5635698132c96cb8cf4c473d
+PAYSTACK_CALLBACK_URL=http://localhost:8000/api/v1/payments/callback
